@@ -1,3 +1,8 @@
+2005-02-04  Alan Modra  <amodra@bigpond.net.au>
+
+	* emultempl/elf32.em (gld${EMULATION_NAME}_find_exp_assignment): Don't
+	look up symbol for etree_provide here.
+
 2005-02-02  Daniel Jacobowitz  <dan@codesourcery.com>
 
 	* emulparams/elf32bmip.sh (TEXT_DYNAMIC): Always set.
